# qm_door

./: .gitignore  .gitmodules  LICENSE  README.md
qm_control/: package.xml
qm_controllers/: CMakeLists.txt  package.xml
qm_controllers/config/: door_opening.rviz  empty.rviz  reference.info  stairs.rviz  task.info  tunnel.rviz  vchimney.rviz
qm_controllers/include/qm_controllers/: GaitTopicPublisher.h  QmTargetTrajectoriesPublisher.h  StartingPosition.h
qm_controllers/launch/: load_qm_target.launch  rviz_stairs.launch
qm_controllers/src/: GaitCommandSimulator.cpp  GaitTopicPublisher.cpp  QMController.cpp  QmTargetTrajectoriesPublisher.cpp  QmTargetTrajectoriesPublisher_node.cpp
qm_description/: CMakeLists.txt  package.xml
qm_description/config/: door_view.rviz  manipulator_view.rviz  qm_view.rviz  quadruped_view.rviz  robot_control.yaml
qm_description/launch/: view_dog.launch  view_door.launch  view_manipulator.launch  view_qm.launch
qm_description/meshes/camera/: camera.stl  camera_cover.stl  support_1.stl  support_2.stl  support_3.stl
qm_description/meshes/doors/: door.stl  frame.stl  lever.stl
qm_description/meshes/manipulator/: handlegrip.stl
qm_description/meshes/mazes/: maze_3.stl  maze_4.stl
qm_description/meshes/pallets/: Pallet13cm.stl  Pallet15cm.stl  Pallet18cm.stl
qm_description/meshes/quadruped/aliengo/: calf_corrected.stl
qm_description/meshes/sar/: TerrainMobile.stl
qm_description/meshes/tunnel/: TerrainTunnel.stl  Tunnel30.stl  Tunnel60.stl
qm_description/meshes/vchimney/: VChimney.stl
qm_description/urdf/doors/: door_pull.urdf  door_pull.xacro  door_push.urdf  door_push.xacro
qm_description/urdf/manipulator/: ft_sensor.xacro  gazebo.xacro  materials.xacro  robot.xacro  transmission.xacro  z1.urdf
qm_description/urdf/pallets/: pallet1.xacro  pallet2.xacro  pallet3.xacro  pallet4.xacro
qm_description/urdf/quadruped/: aliengo.urdf
qm_description/urdf/quadruped/aliengo/: const.xacro
qm_description/urdf/quadruped/common/: gazebo.xacro  leg.xacro  materials.xacro
qm_description/urdf/quadruped_manipulator/: _d435.gazebo.xacro  camera.xacro  camera2.xacro  const.xacro  gazebo.xacro  robot.urdf  robot.xacro  robot_mpc.xacro
qm_description/urdf/sar/: ball05.xacro  ball10.sdf  ball10.xacro  ball15.sdf  ball15.xacro  plate.sdf  plate.xacro  rod.sdf  rod.xacro  terrain.xacro
qm_description/urdf/stairs/: stairs.urdf  stairs.xacro
qm_description/urdf/tunnel/: tunnel1.xacro
qm_description/urdf/vchimney/: vchimney.xacro
qm_description/urdf/walls/: wall_1.urdf  wall_1.xacro  wall_2.urdf  wall_2.xacro
qm_door/: .gitattributes  CMakeLists.txt  README.md  package.xml
qm_door/qm_controllers/: CMakeLists.txt  package.xml
qm_door/qm_controllers/config/: maze.rviz  mobile.rviz  pallets.rviz  reference.info  sar.rviz  task.info  vchimney.rviz
qm_door/qm_controllers/launch/: load_qm_target.launch  rviz_door.launch
qm_door/qm_controllers/src/: QMController.cpp  QmTargetTrajectoriesPublisher.cpp
qm_door/qm_description/: package.xml
qm_door/qm_description/meshes/mazes/: maze_1.stl  maze_2.stl
qm_door/qm_description/meshes/pallets/: Pallet20cm.stl
qm_door/qm_description/meshes/sar/: Plate.stl  Sphere10.stl  Sphere15.stl  Sphere5.stl  Stick.stl
qm_door/qm_description/meshes/tunnel/: Tunnel40.stl  Tunnel50.stl
qm_door/qm_description/urdf/mazes/: maze1.xacro  maze2.xacro  maze3.xacro  maze4.xacro
qm_door/qm_description/urdf/pallets/: pallet1.xacro  pallet4.xacro
qm_door/qm_description/urdf/quadruped_manipulator/: camera2.xacro  robot.urdf  robot.xacro
qm_door/qm_description/urdf/sar/: ball15.xacro
qm_door/qm_description/urdf/tunnel/: terrain.xacro  tunnel2.xacro  tunnel3.xacro  tunnel4.xacro
qm_door/qm_gazebo/launch/cs/: empty_world.launch  pallets_world.launch  pull_door_world.launch  push_door_world.launch  tunnel_world.launch
qm_door/qm_gazebo/launch/ss/: empty_world_mpc.launch  sar_world_mpc.launch  tunnel_world_mpc.launch  vchimney_world_mpc.launch
qm_door/qm_planner/: CMakeLists.txt  package.xml
qm_door/qm_wbc/: CMakeLists.txt  package.xml
qm_door/qm_wbc/include/qm_wbc/: WbcBase.h
qm_gazebo/config/: default.yaml  position_control.yaml
qm_gazebo/launch/: debug.launch  empty_world.launch  empty_world_mpc.launch  pallets_world.launch  pull_door_world.launch  push_door_world.launch  sar_world.launch  stairs_world.launch  tunnel_world.launch  vchimney_world.launch
qm_gazebo/launch/cs/: pull_door_world.launch  push_door_world.launch  sar_world.launch  stairs_world.launch  vchimney_world.launch
qm_gazebo/launch/ss/: maze_world_mpc.launch  mobile_world_mpc.launch  pallets_world_mpc.launch  pull_door_world_mpc.launch  push_door_world_mpc.launch  stairs_world_mpc.launch
qm_gazebo/worlds/: custom_world.world
qm_hw/: CMakeLists.txt  package.xml
qm_hw/config/: robot_parameters.yaml
qm_hw/include/qm_hw/: QmHW.h
qm_hw/include/unitree_legged_sdk/: udp.h
qm_hw/launch/: qm_hw.launch
qm_hw/src/: QmHW.cpp
qm_interface/include/qm_interface/common/: ModelSettings.h
qm_interface/src/visualization/: qm_visualization.cpp
qm_planner/: CMakeLists.txt  package.xml
qm_planner/launch/: go_to_handle_gazebo.launch  go_to_handle_hw.launch  go_to_handle_sim.launch  open_door_hw.launch  open_door_sim.launch
qm_planner/src/: GoToDoor.cpp  GoToHandle.cpp  OpenDoor.cpp  TestCircle.cpp
qm_vision/: CMakeLists.txt  package.xml
qm_vision/launch/: door_hw_test.launch  door_test.launch  handle.launch  handle_hw.launch  handle_sim.launch
qm_vision/rviz/: door_param.rviz  handle_detection.rviz  vision_door.rviz
qm_vision/scripts/: detect.py  detect_gazebo.py  door_center.py  door_param.py  door_params.py  handle_centroid.py  handle_detection_node.py  masked_depth.py  plane_extractor.py
qm_vision/srv/: ComputeRadius.srv  ComputeRef.srv
qm_wbc/cfg/: wbcWigeht.cfg
qm_wbc/include/qm_wbc/: WbcBase.h
qm_wbc/src/: WbcBase.cpp
