<?xml version="1.0"?>
<package format="2">
  <name>qm_door</name>
  <version>1.0.0</version>
  <description>Metapackage for qm door</description>
  <maintainer email="danisotacam@gmail.com">danisotelo</maintainer>
  <license>BSD3</license>
  <author email="danisotacam@gmail.com">danisotelo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>qm_common</exec_depend>
  <exec_depend>qm_controllers</exec_depend>
  <exec_depend>qm_description</exec_depend>
  <exec_depend>qm_estimation</exec_depend>
  <exec_depend>qm_hw</exec_depend>
  <exec_depend>qm_interface</exec_depend>
  <exec_depend>qm_msgs</exec_depend>
  <exec_depend>qm_planner</exec_depend>
  <exec_depend>qm_vision</exec_depend>
  <exec_depend>qm_wbc</exec_depend>
  <exec_depend>qpoases_catkin</exec_depend>

   <export>
   	  <metapackage />
   </export>

</package>
