<package format="2">
  <name>qm_planner</name>
  <version>1.0.0</version>
  <description>The qm_planner package</description>
  <maintainer email="danisotacam@gmail.com">danisotelo</maintainer>
  <license>BSD3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>qm_msgs</build_depend>
  <build_depend>qm_vision</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>qm_msgs</exec_depend>
  <exec_depend>qm_controllers</exec_depend>
  <exec_depend>qm_vision</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

