<?xml version="1.0"?>
<package format="2">
  <name>qm_vision</name>
  <version>1.0.0</version>
  <description>The qm vision package</description>
  <maintainer email="danisotacam@gmail.com">danisotelo</maintainer>
  <license>MIT</license>
  <author email="danisotacam@gmail.com">danisotelo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>

</package>
