<?xml version="1.0"?>
<package format="2">
  <name>qm_description</name>
  <version>1.0.0</version>
  <description>The qm and door urdf description package</description>
  <maintainer email="danisotacam@gmail.com">danisotelo</maintainer>
  <license>MIT</license>
  <author email="danisotacam@gmail.com">danisotelo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

</package>
